whitespace fixes

--- a/distypo-app/src/app/document-view/document-view.scss
+++ b/distypo-app/src/app/document-view/document-view.scss
@@ -2,10 +2,9 @@
   height: 80vh;
   padding: 0;
   overflow: hidden;
-
   display: flex;
   flex-direction: column;
-
+  white-space: pre-wrap;
   border: 1px solid var(--mat-sys-primary);
   border-radius: 0 0 var(--mat-sys-corner-medium, 12px) var(--mat-sys-corner-medium, 12px);
 
